#                    "Merged from", "Cleanup", "Issue"                         #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------
LP-2009-09-25-1: Bugfix:     issue1760 test left a reference to a fake host
                 Review:     JG

LP-2009-09-25-0: Bugfix:     Fixed issue1760 test
                 Bugfix:     consumable resources test fails for user *test*
                 Bugfix:     Hedeby test fixes for 1.0u3
                 Enhancem.:  Improved get_current_drmaa_lib_extension{}
                 Enhancem.:  resolve_build_arch_installed_libs{} no longer makes
                             tests unsupported
                 Review:     JG

JG-2009-09-25-0: Bugfix:     fixed cleanup method in bugs/issuezilla/2345
                 Review:     CR

CR-2009-09-22-0: Bugfix:     fixed framework error for tests that return 99
                             in setup procedure to skip the test
                 Review:     AA

TB-2009-09-21-0: Enhancem.:  Hedeby:
                             o Added test for PermanentRequestSLO with separate
                               setting of usage
                             o Added util/hedeby_get_version_num() to get the
                               numerical version of Hedeby (useful for skipping
                               tests)
                 Issue:      676
                 Review:     RH

JG-2009-09-18-1: Bugfix:     fixed upgrade_test/general
                 Review:     CR

JG-2009-09-18-0: Bugfix:     pe_ranges test failed due to wrong order in
                             cleanup (same issue as with IZ 2254 test)
                 Cleanup:    Fixed an ADOC warning, made qrsh test more fault
                             tolerant.